<resources>
    <string name="app_name">Lyrico</string>
    <string name="top_ten_lyrics">Top 10 Lyrics</string>
    <string name="charts">Charts</string>
    <string name="singer">Singer</string>
    <string name="song_title">Song Title</string>
    <string name="number">##</string>
    <string name="example_lyrics">line1\nline2\n</string>
    <string name="release_date">Release Date</string>
    <string name="menu_share">Share</string>
    <string name="about_name">Ichsan Nulmuhlis</string>
    <string name="about_email">ichsan.nulmuhlis@gmail.com</string>
    <string name="about_me">About Me</string>
    <string name="tv_about_me_desc">Hello, my name is Ichsan Nulmuhlis, I am an Informatics Engineering Student. This is my first android app, made for coding \"Creating Android Apps for Beginners\". This app is inspired by Genius - Song Lyrics Finder.</string>
    <string name="about_song">About Song</string>
    <string name="splash_screen">Lyrico - Find Lyrics and Share It</string>
    <string-array name="data_song_title">
        <item>Say You Won\'t Let Go</item>
        <item>Kill Bill</item>
        <item>A&amp;W</item>
        <item>Boy\'s a liar Pt.2</item>
        <item>Until I Found You</item>
        <item>TQG</item>
        <item>Viva la Vida</item>
        <item>Die For You (Remix)</item>
        <item>Shinunoga E-Wa</item>
        <item>OMG</item>
    </string-array>
    <string-array name="data_singer">
        <item>James Arthur</item>
        <item>SZA</item>
        <item>Lana Del Rey</item>
        <item>PinkPantheress &amp; Ice Spice</item>
        <item>Stepehn Sanchez</item>
        <item>KAROL G &amp; Shakira</item>
        <item>Coldplay</item>
        <item>The Weeknd &amp; Ariana Grande</item>
        <item>Fuji Kaze</item>
        <item>NewJeans</item>
    </string-array>
    <string-array name="data_release_date">
        <item>September 9, 2016</item>
        <item>December 9, 2022</item>
        <item>February 14, 2023</item>
        <item>February 3, 2023</item>
        <item>September 1, 2021</item>
        <item>February 24, 2023</item>
        <item>May 25, 2008</item>
        <item>February 24, 2023</item>
        <item>May 20, 2023</item>
        <item>January, 2023</item>
    </string-array>
</resources>